# Unknown-bot

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  test_connection.py  test_oms.py  zetsu_state.db
analysis/: indicators.py  market_structure.py  volume_profile.py
analysis/indicators/: __init__.py  momentum.py  trend.py  volatility.py  volume.py
analysis/liquidity/: fvg.py  levels.py  pools.py
analysis/structure/: breaks.py  fractals.py  trend.py
configs/: btc_usdt_config.py
core/: decision_engine.py  logger.py  risk_manager.py  strategy_manager.py
core/interfaces/: __init__.py  base_broker.py  base_oracle.py  base_state.py
core/oracles/: ambush.py  scout.py  unicorn.py
core/state/: state_manager.py
data/: history_downloader.py  ingestor.py
domain/: __init__.py  events.py  exceptions.py  market.py  models.py  trading.py
engine/: event_bus.py  orchestrator.py
execution/: oms.py  simulated.py
infra/: binance_client.py  db_setup.py  discord_notifier.py  docker-compose.yml  setup_db.sql
mlops/analysis/: feature_analysis.py
mlops/data_pipeline/: feature_store.py
mlops/models/: meta_labeler.json  meta_labeler_config.json  meta_labeler_nn.keras  scaler.pkl
mlops/optimization/: optuna_lab.py
mlops/training/: train_meta.py
research/: blackbox.py  blackbox_export.parquet  btc_backtester.py  btc_forensics.py  debug_pipeline.py  main.py
tmp/: debug_trace.py
