[project]
name = "research"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ccxt (>=4.5.39,<5.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "adbc-driver-postgresql (>=1.10.0,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "connectorx (>=0.4.5,<0.5.0)",
    "ta-lib (>=0.6.8,<0.7.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "optuna (>=4.7.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
